fixed profile overflow issue on mobile

--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -361,6 +361,8 @@ body {
 .react-tabs {
   background-color: #FFF;
   border-radius: 5px;
+  width: 90vw;
+  overflow-x: scroll;
 }
 
 .friend-placeholder {
